--- a/ListagemEnderecos.html
+++ b/ListagemEnderecos.html
@@ -21,6 +21,12 @@
 
             <th>
 
+                Rua
+
+            </th>
+
+            <th>
+
                 Cidade
 
             </th>
@@ -31,11 +37,7 @@
 
             </th>
 
-            <th>
-
-                Código do Endereço
-
-            </th>
+           
 
          </tr>
 
